# PDS

./: .gitignore  2d_image_editing_playground.ipynb  README.md  environment.yaml  setup.py
3d_editing/: README.md  pyproject.toml
3d_editing/pds_nerf/: pds_config.py
3d_editing/pds_nerf/data/datamanagers/: pds_datamanager.py  pds_splat_datamanager.py
3d_editing/pds_nerf/data/dataparsers/: pds_dataparser.py
3d_editing/pds_nerf/engine/: pds_trainer.py
3d_editing/pds_nerf/fields/: pds_nerfacto_field.py
3d_editing/pds_nerf/models/: pds_nerfacto.py  pds_splatfacto.py
3d_editing/pds_nerf/pipelines/: base_pipeline.py  pds_pipeline.py  refinement_pipeline.py
pds/: pds.py
pds/dreambooth/: run.py  train_dreambooth.py
pds/nerf/: pyproject.toml
pds/nerf/pds_nerf/: pds_config.py  pds_datamanager.py  pds_dataparser.py  pds_model.py  pds_pipeline.py  pds_trainer.py  refinement_pipeline.py
pds/nerf/pds_nerf/modified_nerfstudio/: base_pipeline.py  nerfacto.py  nerfacto_field.py
pds/svg/pds_svg/: pds_svg.py
pds/utils/: imageutil.py  svgutil.py  sysutil.py  trainutil.py
svg_editing/: README.md  pds_svg.py
