[project]
name = "pds_nerf"
version = "0.1.0"

dependencies=[
		"nerfstudio==0.3.4",
		"clip @ git+https://github.com/openai/CLIP.git",
		"diffusers==0.17.1",
		"transformers==4.30.2",
		"accelerate",
		"einops",
]

# black
[tool.black]
line-length = 120

# pylint
[tool.pylint.messages_control]
max-line-length = 120
generated-members = ["numpy.*", "torch.*", "cv2.*", "cv.*"]
good-names-rgxs = "^[_a-zA-Z][_a-z0-9]?$"
ignore-paths = ["scripts/colmap2nerf.py"]
jobs = 0
ignored-classes = ["TensorDataclass"]

disable = [
  "duplicate-code",
  "fixme",
  "logging-fstring-interpolation",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-locals",
  "unnecessary-ellipsis",
]

[tool.setuptools.packages.find]
include = ["pds_nerf"]

[project.entry-points.'nerfstudio.method_configs']
pds = 'pds_nerf.pds_config:pds_method'
pds_refinement = 'pds_nerf.pds_config:refinement_method'
nerfacto = 'pds_nerf.pds_config:nerfacto_method'
